ingress-nginx/ingress-mysql.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/server-alias: nginx.example.com
  labels:
    app: mysql
  name: mysql
  namespace: default
spec:
  rules:
  - host: nginx.example.com
    http:
      paths:
      - backend:
          serviceName: mysql-service
          servicePort: 3306
        path: /
